understanding npm and npx

--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "react"
   ],
   "author": "wazir",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.13.3"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  }
 }
