--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "hello"
   ],
   "author": "wazir",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.13.3",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  }
 }
