--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learning_react",
   "version": "1.0.0",
-  "description": "namaste react by akshai saini",
+  "description": "namaste react by Akshay Saini",
   "main": "App.js",
   "scripts": {
     "test": "jest"
@@ -22,5 +22,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
-  }
+  },
+  "browserslist": [
+    "last 2 version"
+  ]
 }
