--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "tailwindcss": "^4.0.16"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0"
   },
