--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.17",
+    "@testing-library/react": "^16.3.0",
     "autoprefixer": "^10.4.21",
     "parcel": "^2.13.3",
     "postcss": "^8.5.3",
