--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "author": "wazir",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "@tailwindcss/postcss": "^4.0.17",
     "@testing-library/react": "^16.3.0",
     "autoprefixer": "^10.4.21",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "parcel": "^2.13.3",
     "postcss": "^8.5.3",
     "process": "^0.11.10",
